@@ -12,6 +12,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 * Log output and runtime config to /var/log/evocheck.log.
 * check_mountfstab and check_mount: make sure all mounted partitions are in fstab and all partitions in fstab are mounted
 
+### Fixed
+
+* check_carpadvbase and check_carppreempt: fixed indentation
+
 ### Changed
 
 * check_evobackup: zzz_evobackup is now executed with bash
